<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<TableLayout 
        android:id="@+id/tl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:stretchColumns="1" >
    
	    <TableRow 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content" >
	        <TextView
        		android:id="@+id/tvEditName"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/name" />
	        <EditText 
	            android:id="@+id/etName"
	            android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:inputType="textCapWords"
	    		android:layout_marginLeft="5dp"
	    		android:background="@android:drawable/editbox_background" />
	    </TableRow>
	    
	    <TableRow 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content" >
	        <TextView
        		android:id="@+id/tvEditRow"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/row" />
	        <EditText 
	            android:id="@+id/etRow"
	            android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:inputType="textCapWords"
	    		android:layout_marginLeft="5dp"
	    		android:background="@android:drawable/editbox_background" />
	    </TableRow>
	    
	    <TableRow 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content" >
	        <TextView
        		android:id="@+id/tvEditSection"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/section" />
	        <EditText 
	            android:id="@+id/etSection"
	            android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:inputType="textCapWords"
	    		android:layout_marginLeft="5dp"
	    		android:background="@android:drawable/editbox_background" />
	    </TableRow>
	    
	</TableLayout>   
    
</RelativeLayout>
